--- a/templates/layout.html
+++ b/templates/layout.html
@@ -89,7 +89,7 @@
 <footer id="footer">
     <div class="container">
         <hr>
-        <p class="text-center">Todo App built using Flask, SQLAlchemy, Vertabelo, PostgreSQL and Twitter Bootstrap</p>
+        <p class="text-center">Todo App built using Flask, SQLAlchemy, PostgreSQL and Twitter Bootstrap</p>
     </div>
 </footer>
 
